tests/baselines/reference/taggedTemplatesWithIncompleteTemplateExpressions6.errors.txt
tests/cases/compiler/taggedTemplatesWithIncompleteTemplateExpressions6.ts(5,18): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
tests/cases/compiler/taggedTemplatesWithIncompleteTemplateExpressions6.ts(5,23): error TS1109: Expression expected.


==== tests/cases/compiler/taggedTemplatesWithIncompleteTemplateExpressions6.ts (2 errors) ====
    function f(x: TemplateStringsArray, y: string, z: string) {
    }
    
    // Incomplete call, not enough parameters, at EOF.
    f `123qdawdrqw${ 1 }${
                     ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
                          
!!! error TS1109: Expression expected.